--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ color :Yellow; font-size:25pt; }
 </center>
 <p>You are shown a set of four cards placed on a table, each of which has a number on one side and a colored patch on the other side.<br> 
 The visible faces of the cards show 5, 4, silver and copper.
-Which card(s) must you turn over in order to test the truth of the proposition that if a card shows an even number on one face, then its opposite face is silver ?<p/>
+Which card must you turn over in order to test the truth of the proposition that if a card shows an even number on one face, then its opposite face is silver ?<p/>
 <center>
 <div class = "aligncenter is-resized" style = "width:100%">
 <div style = "display: inline-block">
