--- a/index.html
+++ b/index.html
@@ -4,10 +4,14 @@
 <meta charset="utf-8" />
 <title>Turndcard</title>
 <script type="text/javascript">
-function f1() {
- alert("Congrats!!! Right answer");}
-function f2() {
+function f1(){
+var a = 4.jpg,Steampunk.jpg;
+var b = 5.jpg,Steampunk Silver.jpg;
+{if (a=0)
+ alert("Congrats!!! Right answer");
+ else
  alert("Wrong answer!!!");}
+ </script>
 </script>
 <style>
  body::before{
