--- a/index.html
+++ b/index.html
@@ -4,12 +4,9 @@
 <meta charset="utf-8" />
 <title>Turndcard</title>
 <script type="text/javascript">
-function f1(){
-var a = 4.jpg,Steampunk.jpg;
-var b = 5.jpg,Steampunk Silver.jpg;
-{if (a=0)
- alert("Congrats!!! Right answer");
- else
+function f1() {
+ alert("Congrats!!! Right answer");}
+ function f2() {
  alert("Wrong answer!!!");}
  </script>
 <style>
