--- a/index.html
+++ b/index.html
@@ -19,10 +19,18 @@ if (c==2){
  alert("Oops! Wrong answer.");}
 </script>
 <style>
-body { background : url(https://i.imgur.com/0IGkpsC.jpg);
-background-size: 100% 100%; }
-p {font-family :Calibri;
-color :Yellow; font-size:25pt; }
+body::before{
+  content: '';
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  position: fixed;
+  background-image: url(https://i.imgur.com/0IGkpsC.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+ }
 </style>
 </head>
  <body><center>
