--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@ body::before{
   background-repeat: no-repeat;
   background-size: cover;
  }
+ p {font-family :Calibri;
+color :Yellow; font-size:25pt; }
 </style>
 </head>
  <body><center>
