--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ body::before{
   background-size: cover;
  }
  p{font-family :Calibri;
-color :Yellow; font-size:25pt; }
+color :White; font-size:25pt; }
 </style>
 </head>
  <body><center>
