--- a/index.html
+++ b/index.html
@@ -9,12 +9,14 @@ function f1() {
 c++;
 document.getElementById("myImg4").removeAttribute("onclick");
 if (c==2){ 
- alert("Congrats!!! Right answer");}}
+ alert("Congrats!!! Right answer");
+window.location.replace("https://saldanhas.github.io/Puzzle0/");}}
  function f2() {
 c++;
 document.getElementById("myImg2").removeAttribute("onclick");
 if (c==2){ 
- alert("Congrats!!! Right answer");}}
+ alert("Congrats!!! Right answer");
+window.location.replace("https://saldanhas.github.io/Puzzle0/");}}
  function f3() {
  alert("Oops! Wrong answer.");}
 </script>
